@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.release>25</maven.compiler.release>
+        <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <skipDependencyCopy>true</skipDependencyCopy>
     </properties>
@@ -20,86 +20,10 @@
             <artifactId>yaeger</artifactId>
             <version>2024.2025</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <mainClass>nl.han.jefmk.EleSlime</mainClass>
-                    <commandlineArgs>
-                        --noSplash
-                    </commandlineArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <profiles>
-        <profile>
-            <id>arm</id>
-            <properties>
-                <skipDependencyCopy>false</skipDependencyCopy>
-            </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>com.google.inject</groupId>
-                    <artifactId>guice</artifactId>
-                    <version>7.0.0</version>
-                </dependency>
-            </dependencies>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <version>3.6.0</version>
-                        <executions>
-                            <execution>
-                                <id>copy-dependencies</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>copy-dependencies</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.build.directory}/modules</outputDirectory>
-                                    <skip>${skipDependencyCopy}</skip>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.11.0</version>
-                        <configuration>
-                            <source>21</source>
-                            <target>21</target>
-                            <compilerArgs>
-                                <arg>--module-path</arg>
-                                <arg>/home/justi/.m2/repository/com/github/han-yaeger/yaeger/2024.2025/yaeger-2024.2025.jar</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.openjfx</groupId>
-                        <artifactId>javafx-maven-plugin</artifactId>
-                        <version>0.0.8</version>
-                        <configuration>
-                            <mainClass>nl.han.jefmk.EleSlime</mainClass>
-                            <options>
-                                <option>--enable-native-access=javafx.graphics,javafx.media</option>
-                                <option>-Djavafx.media.overridenativelib=true</option>
-                                <option>--add-opens=java.base/sun.misc=ALL-UNNAMED</option>
-                            </options>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
 </project>
